--- a/learning/gokart/model.config
+++ b/learning/gokart/model.config
@@ -3,12 +3,11 @@
 <model>
   <name>gokart</name>
   <version>2.0</version>
-  s
   <sdf version="1.7">model.sdf</sdf>
 
   <author>
-    <name>Michael Wu</name>
-    <email>wuxiaohua1011@gmail.com</email>
+    <name>Reuben Thomas</name>
+    <email>reubenthomas123@gmail.com</email>
   </author>
 
   <description>
